# blog_proj

./: .gitignore  README.md  pyproject.toml
backend/: main.py  test.db
backend/alembic/: env.py
backend/alembic/versions/: 0a70fae55bcf_create_tables.py  0e46245be25f_added_account_table.py  153a9b149aba_first_commit.py  15e893e6323b_v1.py  3c4288dc3387_create_table_user_and_blog.py  3e0a62cbb107_fix_annotation_blog_table.py  5059e389215e_v2.py  6d2ae0eba222_initial_migration.py  7be37d4100aa_refacrot_models_add_new_t_tokens.py  ab9d57484fe2_create_tables.py  bc5c7a50f691_v1.py  e164a9aa9252_create_table_user_and_blog.py  e33b8ca9792b_added_tables.py
backend/apis/: base.py
backend/apis/v1/: route_blog.py  route_users.py
backend/core/: config.py  security.py
backend/crud/: blog.py  user.py
backend/db/: connection.py
backend/db/repository/: blog.py  user.py
backend/errors/: jwt_er.py
backend/models/: __init__.py  base.py  blog.py  token.py  user.py
backend/schemas/: blog.py  user.py
backend/tests/: conftest.py  test_route_auth.py
backend/tests/test_routes/: test_user.py
backend/utils/: hashing.py  jwt_process.py  security.py
